--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Пинк: Главная</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="page-header">
       <div class="page-header__inner">
-        <h1 class="page-header__title">Мобильное приложение Пинк</h1><!--Скрыт-->
+        <h1 class="page-header__title  page-header__title--hide">Мобильное приложение Пинк</h1><!--Скрыт-->
         <nav class="main-nav  main-nav--closed  main-nav--nojs">
           <div class="main-nav__wrapper">
             <div class="main-nav__logo">
@@ -30,9 +30,9 @@
             </ul>
           </div>
         </nav>
-        <section class="promo">
+        <div class="page-header__photo">
           <img src="img/iphone-hand-mobile@1x.png" alt="Фотография телефона">
-        </section>
+        </div>
         <section class="download">
           <div class="download__wrapper">
             <div class="download__promo  download__promo--hide">
@@ -53,35 +53,37 @@
       <section class="advantages">
         <h2 class="advantages__title">Наши преимущества</h2><!--Скрыт-->
         <section class="advantages__promo">
-          <p class="advantages__slogan">Устали от серости мегаполиса?</p>
-          <p class="advantages__slogan">Нам есть, что вам предложить!</p>
+          <p class="advantages__slogan  advantages__slogan--wide">Устали от серости мегаполиса?</p>
+          <p class="advantages__slogan  advantages__slogan--narrow">Нам есть, что вам предложить!</p>
         </section>
-        <div class="advantages__wrapper">
-          <ol class="advantages__list">
-            <li class="advantages__item">
-              <div class="advantages__item-photo">
-                <img src="img/iphone-screen-mobile@1x.png" alt="Поднимает настроение">
-              </div>
-              <h3 class="advantages__item-title">Поднимает настроение</h3>
-              <p class="advantages__item-text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
-            </li>
-            <li class="advantages__item">
-              <div class="advantages__item-photo">
-                <img src="img/iphone-screen-mobile@1x.png" alt="Поднимает настроение">
-              </div>
-              <h3 class="advantages__item-title">Меняет мир вокруг</h3>
-              <p class="advantages__item-text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
-            </li>
-            <li class="advantages__item">
-              <div class="advantages__item-photo  advantages__item-photo--show">
-                <img src="img/iphone-screen-mobile@1x.png" alt="Поднимает настроение">
-              </div>
-              <h3 class="advantages__item-title">Заводит новых друзей</h3>
-              <p class="advantages__item-text">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
-            </li>
-          </ol>
-          <div class="advantages__photo">
-            <img src="img/iphone-screen-mobile@1x.png" alt="Поднимает настроение">
+        <div class="advantages__inner">
+          <div class="advantages__wrapper">
+            <ol class="advantages__list">
+              <li class="advantages__item">
+                <div class="advantages__item-photo">
+                  <img src="img/iphone-screen-mobile@1x.png" alt="Поднимает настроение">
+                </div>
+                <h3 class="advantages__item-title">Поднимает настроение</h3>
+                <p class="advantages__item-text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
+              </li>
+              <li class="advantages__item">
+                <div class="advantages__item-photo">
+                  <img src="img/iphone-screen-mobile@1x.png" alt="Поднимает настроение">
+                </div>
+                <h3 class="advantages__item-title">Меняет мир вокруг</h3>
+                <p class="advantages__item-text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+              </li>
+              <li class="advantages__item">
+                <div class="advantages__item-photo  advantages__item-photo--show">
+                  <img src="img/iphone-screen-mobile@1x.png" alt="Поднимает настроение">
+                </div>
+                <h3 class="advantages__item-title">Заводит новых друзей</h3>
+                <p class="advantages__item-text">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
+              </li>
+            </ol>
+            <div class="advantages__photo">
+              <img src="img/iphone-screen-mobile@1x.png" alt="Поднимает настроение">
+            </div>
           </div>
         </div>
       </section>
@@ -93,28 +95,45 @@
         </div>
       </section>
       <section class="reviews">
-        <div class="reviews__wrapper slider">
-          <input class="slider__input" type="radio" name="reviews" id="reviews-input-1" checked>
-          <input class="slider__input" type="radio" name="reviews" id="reviews-input-2">
-          <input class="slider__input" type="radio" name="reviews" id="reviews-input-3">
+        <div class="reviews__wrapper  slider">
+          <input type="radio" id="btn-1" name="reviews" checked>
+          <input type="radio" id="btn-2" name="reviews">
+          <input type="radio" id="btn-3" name="reviews">
+          <div class="reviews__toggles  slider__toggles">
+            <label for="btn-1">1</label>
+            <label for="btn-2">2</label>
+            <label for="btn-3">3</label>
+          </div>
           <ul class="reviews__items">
-            <li class="reviews__item slider__item">
+            <li class="reviews__item  slider__item" id="slide1">
               <div class="reviews__author">
-                <cite class="reviews__author-name">Николай Петров </b>
+                <cite class="reviews__author-name">Николай Петров </cite>
+                <span class="reviews__author-info">25 лет, водитель трамвая</span>
+              </div>
+              <blockquote class="reviews__description">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</blockquote>
+            </li>
+            <li class="reviews__item  slider__item" id="slide2">
+              <div class="reviews__author">
+                <cite class="reviews__author-name">Николай Петров </cite>
+                <span class="reviews__author-info">25 лет, водитель трамвая</span>
+              </div>
+              <blockquote class="reviews__description">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</blockquote>
+            </li>
+            <li class="reviews__item  slider__item" id="slide3">
+              <div class="reviews__author">
+                <cite class="reviews__author-name">Николай Петров </cite>
                 <span class="reviews__author-info">25 лет, водитель трамвая</span>
               </div>
               <blockquote class="reviews__description">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</blockquote>
             </li>
           </ul>
-          <div class="reviews__toggles slider__toggles">
-            <label class="slider__toggle" for="reviews-input-1">1</label>
-            <label class="slider__toggle" for="reviews-input-2">2</label>
-            <label class="slider__toggle" for="reviews-input-3">3</label>
-          </div>
         </div>
       </section>
       <section class="price">
         <div class="price__inner">
+          <input class="slider__input" type="radio" name="reviews" id="price-input-1" checked="checked">
+          <input class="slider__input" type="radio" name="reviews" id="price-input-2">
+          <input class="slider__input" type="radio" name="reviews" id="price-input-3">
           <table class="price__table price__table--active">
             <thead>
               <tr class="price__header">
@@ -174,7 +193,7 @@
               </tr>
             </tbody>
           </table>
-          <div class="price__table-control slider__toggles">
+          <div class="price__table-control  slider__toggles">
             <label class="slider__toggle" for="price-input-1">1</label>
             <label class="slider__toggle" for="price-input-2">2</label>
             <label class="slider__toggle" for="price-input-3">3</label>
@@ -201,20 +220,38 @@
           </div>
         </div>
       </section>
-      <section class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3997.198230653264!2d30.323083!3d59.938794!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0YHQuNGPLCAxOTExODY!5e0!3m2!1sru!2sby!4v1495886659777" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <section class="map">
+        <div class="map__background"></div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3997.198230653264!2d30.323083!3d59.938794!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0YHQuNGPLCAxOTExODY!5e0!3m2!1sru!2sby!4v1495886659777" style="border:0" allowfullscreen></iframe>
+      </section>
     </main>
-    <footer class="page-footer  page-footer--hide">
+    <footer class="page-footer  page-footer--hide  page-footer--show">
       <section class="page-footer__logo">
-        <a href="index.html"><img src="logo.svg" alt="Логотип"></a>
+        <a href="index.html">
+          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="146.3px" height="40.375px" viewBox="0 0 146.3 40.375" enable-background="new 0 0 146.3 40.375" xml:space="preserve">
+            <g>
+              <path fill="#283645" d="M71.874,18.661c0-0.708,0.58-1.288,1.256-1.288h7.18c5.087,0,8.436,2.704,8.436,7.146v0.063 c0,4.86-4.057,7.373-8.854,7.373h-5.475v6.825c0,0.708-0.58,1.287-1.289,1.287c-0.676,0-1.256-0.58-1.256-1.287L71.874,18.661 L71.874,18.661z M79.988,29.641c3.734,0,6.182-1.996,6.182-4.959v-0.062c0-3.221-2.414-4.894-6.053-4.894h-5.699v9.917h5.57V29.641 z"/>
+              <path fill="#283645" d="M93.603,18.5c0-0.708,0.579-1.288,1.255-1.288c0.709,0,1.288,0.58,1.288,1.288v20.283 c0,0.708-0.579,1.287-1.288,1.287c-0.676,0-1.255-0.579-1.255-1.287V18.5z"/>
+              <path fill="#283645" d="M102.744,18.532c0-0.676,0.58-1.256,1.256-1.256h0.354c0.58,0,0.935,0.29,1.288,0.74l13.684,17.45V18.468 c0-0.676,0.547-1.256,1.256-1.256c0.676,0,1.225,0.58,1.225,1.256v20.349c0,0.677-0.48,1.19-1.158,1.19h-0.129 c-0.548,0-0.936-0.321-1.318-0.772l-13.976-17.867v17.449c0,0.677-0.547,1.257-1.257,1.257c-0.676,0-1.223-0.58-1.223-1.257V18.532 H102.744z"/>
+              <path fill="#283645" d="M128.173,18.5c0-0.708,0.58-1.288,1.257-1.288c0.708,0,1.286,0.58,1.286,1.288v12.331l12.848-13.16 c0.29-0.257,0.579-0.451,0.998-0.451c0.676,0,1.225,0.612,1.225,1.256c0,0.354-0.162,0.644-0.42,0.901l-7.984,7.92l8.564,10.561 c0.225,0.291,0.354,0.547,0.354,0.936c0,0.676-0.577,1.288-1.285,1.288c-0.482,0-0.807-0.259-1.03-0.58l-8.401-10.464l-4.863,4.861 v4.895c0,0.708-0.578,1.288-1.286,1.288c-0.677,0-1.257-0.58-1.257-1.288V18.5H128.173z"/>
+            </g>
+            <path fill="#FFFFFF" d="M60.498,28.266"/>
+            <path fill="#D22856" d="M60.462,28.016c-0.002-0.009-5.175-21.365-5.175-21.365C54.926,4.303,52.694,0,46.688,0 c-0.829,0-1.5,0.671-1.5,1.5s0.671,1.5,1.5,1.5c4.856,0,5.575,3.729,5.639,4.143l4.767,19.701h-2.073 c-0.742-5.927-5.802-10.531-11.927-10.531s-11.186,4.604-11.927,10.531h-1.82c-0.741-5.927-5.802-10.531-11.927-10.531 S6.235,20.917,5.493,26.844H3.42L8.187,7.143C8.25,6.729,8.97,3,13.826,3c0.829,0,1.5-0.671,1.5-1.5S14.655,0,13.826,0 C7.82,0,5.588,4.303,5.227,6.651c0,0-5.173,21.356-5.175,21.365c-0.266,1.109,0.531,1.826,1.426,1.826 c0.012,0,0.023,0.004,0.036,0.004h3.982c0.741,5.926,5.802,10.53,11.927,10.53s11.185-4.604,11.927-10.53h1.814 c0.742,5.926,5.802,10.53,11.927,10.53s11.186-4.604,11.927-10.53H59c0.012,0,0.023-0.004,0.036-0.004 C59.931,29.842,60.728,29.125,60.462,28.016z M26.315,29.844c-0.715,4.272-4.421,7.531-8.896,7.531s-8.18-3.259-8.896-7.531 c-0.082-0.488-0.135-0.988-0.135-1.5s0.053-1.011,0.135-1.5c0.715-4.271,4.421-7.531,8.896-7.531s8.18,3.26,8.896,7.531 c0.082,0.489,0.135,0.988,0.135,1.5S26.397,29.355,26.315,29.844z M51.99,29.844c-0.716,4.272-4.421,7.531-8.896,7.531 c-4.475,0-8.181-3.259-8.896-7.531c-0.082-0.488-0.135-0.988-0.135-1.5s0.053-1.011,0.135-1.5c0.716-4.271,4.421-7.531,8.896-7.531 c4.475,0,8.181,3.26,8.896,7.531c0.082,0.489,0.135,0.988,0.135,1.5S52.072,29.355,51.99,29.844z"/>
+          </svg>
+        </a>
       </section>
       <section class="page-footer__social">
-        <a class="social-link social-link--tw" href="#">Мы в Твиттере</a>
-        <a class="social-link social-link--fb" href="#">Мы в Фейсбуке</a>
-        <a class="social-link social-link--yt" href="#">Мы на Youtube</a>
+        <a class="social-link  social-link--tw" href="#">Мы в Твиттере</a>
+        <a class="social-link  social-link--fb" href="#">Мы в Фейсбуке</a>
+        <a class="social-link  social-link--yt" href="#">Мы на Youtube</a>
       </section>
       <section class="page-footer__copyright">
         <span>Разработано</span>
-        <a class="page-footer__copyright-link btn" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+        <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
+          <svg class="page-footer__copyright-svg" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
+            <path fill="#d22856" d="M13.62,0.017L13.472,0L0,1.412v24.661l13.472,8.017l13.43-7.99l0.042-0.026V1.412L13.62,0.017z M25.019,12.127L13.495,5.334 l-0.001-0.104L13.407,5.28l-0.088-0.056v0.109L1.925,12.118V3.147l11.547-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5 l-4.479,2.64l-7.093-4.221l-0.013,1.415l5.904,3.513l-0.86,0.507l-5.031-2.992l-0.013,1.415l3.827,2.275l-0.782,0.523l-3.032-1.787 l-0.013,1.413l1.852,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.015,1.044l-7.941-4.728L5.395,19.65 l7.979,4.796l0.017,1.076l-7.972-4.741l-0.013,1.415l8.021,4.821l0.045,0.026l8.143-4.872v-1.268l-0.011-0.148v-3.761l3.415-2.036 v10.02L13.472,31.85L1.925,24.979V15.127z"/>
+          </svg>
+        </a>
       </section>
     </footer>
   </body>
